# colorful-code

./: .bazelrc  .gitattributes  .gitignore  .prettierignore  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  components.json  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/cli/: tsconfig.json
apps/cli/src/: api.ts  args.ts  main.ts  sse.ts
apps/cli/test/: cli.test.ts
apps/desktop/: README.md  package.json
apps/desktop/scripts/: build-server-sidecar.mjs
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon-dark.icns  icon.icns
apps/desktop/src-tauri/icons/icon-dark.icon/: icon.json
apps/desktop/src-tauri/icons/icon.icon/: icon.json
apps/desktop/src-tauri/src/: lib.rs  macos_speech.m  main.rs
apps/server/: .env.example  bunfig.toml  eslint.config.mjs  package.json  tsconfig.json  tsconfig.test-foundation.json  tsconfig.test.json
apps/server/scripts/: backup-database.ts  build-production.ts  create-legacy-fixture.ts  generate-legacy-schema-manifest.ts  verify-production-build.ts
apps/server/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/server/test/: cors-config.test.ts  daemon-lifecycle.test.ts  data-directory-instance-lock.test.ts  database-access-boundary.test.ts  database-backup.test.ts  database-kernel-lifecycle.test.ts  database-provider.test.ts  environment.test.ts  golden-path.e2e.test.ts  legacy-baseline.test.ts  lsp-config.test.ts  lsp-productization.e2e.test.ts  main-bootstrap.test.ts  mcp-config.test.ts  mcp-productization.e2e.test.ts  migration-backup-recovery.test.ts  migration-framework.test.ts  model-adapters.test.ts  model-selection.test.ts  models-service.test.ts  phase-0a-invariants.json  phase-0a-invariants.test.ts  phase-0a-sqlite-foundation.test.ts  plugin-session-merge.test.ts  plugins.test.ts  production-build-boundary.test.ts  projects-history.e2e.test.ts  session-model-config.test.ts  session-restore.e2e.test.ts  session-store.test.ts  sqlite-configuration.test.ts  system-prompt-context.test.ts  test-database-factory.test.ts  v2-boundary.test.ts  voice-transcription.test.ts
apps/web/: .env.example  components.json  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/app/: disable-context-menu.tsx  globals.css  layout.tsx  page.tsx
apps/web/lib/: highlighter.ts
apps/web/test/: agent-desktop.test.ts  agent-markdown.test.ts  agent-model-config-storage.test.ts  agent-page-source.test.ts  agent-preferences.test.ts  agent-state.test.ts  agent-voice-api.test.ts  agent-voice-recorder.test.ts
bazel/: BUILD.bazel  README.md  run-task.sh
bazel/test/: run-task.test.sh
docs/: CODE_REVIEW_REPORT.md
docs/keynote/: colorful-code-keynote.md
docs/maintenance/: 1.x-freeze.md
docs/planning/: agent-2-roadmap-discussion.md
docs/superpowers/: README.md
docs/superpowers/completed/: README.md
docs/superpowers/guides/: 2026-07-01-agent-api.md  dogfood-testing-guide.md  verification-matrix.md
docs/superpowers/plans/: 2026-06-29-agent-server-model-rollout.md  2026-07-03-mcp-plugin-registry.md  2026-07-03-unified-plugin-catalog.md  2026-07-04-github-release-automation.md  2026-07-10-colorful-code-2-implementation-roadmap.md  2026-07-10-phase-minus-one-safety-freeze.md  2026-07-11-data-directory-instance-lock.md  2026-07-14-bazel-orchestration.md  2026-07-14-database-kernel.md  2026-07-14-migration-backup-recovery.md  2026-07-14-sqlite-test-foundation.md  2026-07-15-schema-authoring-foundation-0b1.md  2026-07-15-schema-authoring-foundation-0b10.md  2026-07-15-schema-authoring-foundation-0b2.md  2026-07-15-schema-authoring-foundation-0b3.md  2026-07-15-schema-authoring-foundation-0b4.md  2026-07-15-schema-authoring-foundation-0b5.md  2026-07-15-schema-authoring-foundation-0b6.md  2026-07-15-schema-authoring-foundation-0b7.md  2026-07-15-schema-authoring-foundation-0b8.md  2026-07-15-schema-authoring-foundation-0b9.md  2026-07-17-schema-authoring-foundation-0b5-hardening.md  2026-07-18-schema-0b5-0b6-review-fixes.md  2026-07-19-schema-codegen-bazel-hardening.md
docs/superpowers/specs/: 2026-06-27-agent-monorepo-design.md  2026-06-29-agent-backend-spine-design.md  2026-06-29-environment-split-design.md  2026-07-03-projects-and-chat-history-design.md  2026-07-04-github-release-automation-design.md  2026-07-10-colorful-code-2-core-architecture-design.md  2026-07-10-colorful-code-2-persistence-foundation-design.md  2026-07-10-colorful-code-2-runtime-ownership-recovery-design.md  2026-07-10-colorful-code-2-thread-contract-design.md  2026-07-10-phase-minus-one-safety-freeze-design.md  2026-07-11-data-directory-instance-lock-design.md  2026-07-14-bazel-orchestration-design.md  2026-07-14-database-kernel-design.md  2026-07-14-migration-backup-recovery-design.md  2026-07-14-sqlite-test-foundation-design.md  (+4 more)
tooling/eslint-config/: base.mjs  next.mjs  package.json
tooling/prettier-config/: index.mjs  package.json
tooling/typescript-config/: base.json  nestjs.json  nextjs.json  package-library.json  package.json
(+92 files in other folders)
