def _task(name, task):
    native.sh_binary(
        name = name,
        srcs = ["//bazel:run-task.sh"],
        args = [task],
        visibility = ["//visibility:public"],
    )

_task(name = "build", task = "build")
_task(name = "lint", task = "lint")
_task(name = "typecheck", task = "typecheck")
_task(name = "test", task = "test")
_task(name = "desktop-sidecar", task = "desktop-sidecar")
_task(name = "desktop-check", task = "desktop-check")
_task(name = "desktop-test", task = "desktop-test")
