[package]
name = "colorful-code-desktop"
version = "0.0.0"
description = "Colorful Code desktop shell"
authors = ["Colorful Code"]
edition = "2021"


[lib]
name = "colorful_code_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.1", features = ["macos-private-api"] }
window-vibrancy = "0.6.0"
